--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "node-color-log": "^10.0.2"
+  },
+  "engines": {
+    "node": ">=0.10.x"
   }
 }
