--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-color-log": "^10.0.2"
   },
   "engines": {
-    "node": ">=0.10.x"
+    "node": "v16.15.0",
+    "npm": "8.5.5"
   }
 }
