--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
-    "hapi": "^18.1.0",
+    "handlebars": "^4.7.7",
     "hapi-auth-jwt2": "^10.2.0",
     "hapi-mongodb": "^10.0.3",
     "hapi-response-time": "^2.2.3",
@@ -27,10 +27,14 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
-    "node-color-log": "^10.0.2"
+    "node-color-log": "^10.0.2",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": "v16.15.0",
     "npm": "8.5.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
