--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "node-color-log": "^10.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "semaphore": "^1.1.0",
+    "semaphore-sms": "^0.0.1"
   },
   "engines": {
     "node": "v16.15.0",
